Created a general GTFS_Toolkit from this package. This package now an extension of that package.

--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
     "GTFS"
   ],
   "dependencies": {
-    "async": "^1.4.2",
-    "csvtojson": "^0.4.2",
-    "jsonfile": "^2.2.1",
-    "lodash": "^3.10.1",
-    "turf": "^2.0.2"
+    "GTFS_Toolkit": "https://github.com/availabs/GTFS_Toolkit/tarball/master"
   },
   "scripts": {},
   "main": "index.js",
