--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "GTFS_Toolkit": "https://github.com/availabs/GTFS_Toolkit/tarball/master"
   },
-  "scripts": {},
+  "scripts": {
+    "test": "jest"
+  },
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -21,5 +23,8 @@
   },
   "author": "paultomchik",
   "license": "",
-  "devDependencies": {}
+  "devDependencies": {
+    "jest": "^0.1.40",
+    "jest-cli": "^0.4.x"
+  }
 }
