--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
   "author": "paultomchik",
   "license": "",
   "devDependencies": {
-    "jest": "^0.1.40",
-    "jest-cli": "^0.4.x",
-    "jsonfile": "^2.2.1"
+      "jest": "^0.1.40",
+      "jest-cli": "^0.8.2"
   }
 }
